--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 architects</title>
     <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-    <header>
+</head >
 
+<body class="work-sans-font">
+    <header>
+<head>g3 archtect</head>
     </header>
-    
+
     <main>
 
     </main>
