using basic html and css and responsib layout

--- a/index.html
+++ b/index.html
@@ -8,9 +8,34 @@
 </head >
 
 <body class="work-sans-font">
-    <header>
-<head>g3 archtect</head>
-    </header>
+<header class="bg-light">
+    <nav class="nav-bar display-flex">
+        <h3 class="brand">G3 architects</h3>
+        <ul class="nav-link display-flex">
+            <li class="nav-iteam"><a href="" class="nav-link text-light-gray">Home</a></li>
+            <li class="nav-iteam"><a href="" class="nav-link text-light-gray">About</a></li>
+            <li class="nav-iteam"><a href="" class="nav-link text-light-gray">Contact us</a></li>
+            <li class="nav-iteam"><a href="" class="nav-link text-light-gray">Login</a></li>
+        </ul>
+    </nav>
+    <div class="banner">
+      <div class="banner-container">
+          <div class="banner-head">
+          <h1>Brand New Group of Architects</h1>
+        </div>
+        <div class="banner-pragraph">
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+            </p>
+        </div>
+        <div class="banner-btn">
+            <button>Explore More</button>
+        </div>
+        <div class="img">
+               <img src="./images/banner.png" alt="">
+        </div>
+      </div>
+    </div>
+</header>
 
     <main>
 
