--- a/index.html
+++ b/index.html
@@ -36,11 +36,61 @@
       </div>
     </div>
 </header>
-
+<!--tream section start  -->
     <main>
+   <section class="teams display-flex">
+      <div class="features-img-container ">
+        <img src="./images/team1.png" alt="two architect diccuessing about  the disign">
+        <img src="./images/team2.png" alt="">
+        <img src="./images/team3.png" alt="">
+        <img src="./images/team4.png" alt="">
+    </div>
+    <div class="our-features">
+         <h3><span class="text-light-graye">Quick list</span> <span id="quick-list">of our</span> <br> <span id="features">features</span></h3>
+     <p>  There are many variations of passages of my is brmikster abdullah name idLorem Ipsum available, but the majority have suffered alteration in some form, by injected humourifnjh equwpment randomised words which don't look eveoijdsj</p>
 
+    <div class="banner-btn">
+            <button>Explore More</button>
+        </div>
+    </div>
+   </section>
     </main>
+<!-- teams secetion end -->
+ <!-- featurs will enjoy section start -->
+     <section>
+        <h3>Some facts</h3>
+        <div class="featurs-pragraph">
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        </div>
+        <div class="facts-container">
+            <div class="fact">
+                <img src="" alt="" class="fact-icone">
+                <h4 class="fact-number"></h4>
+                <h5 class="fact-name"></h5>
+            </div>
+            <div class="fact">
+                <img src="" alt="" class="fact-icone">
+                <h4 class="fact-number"></h4>
+                <h5 class="fact-name"></h5>
+            </div>
+            <div class="fact">
+                <img src="" alt="" class="fact-icone">
+                <h4 class="fact-number"></h4>
+                <h5 class="fact-name"></h5>
+            </div>
+            <div class="fact">
+                <img src="" alt="" class="fact-icone">
+                <h4 class="fact-number"></h4>
+                <h5 class="fact-name"></h5>
+            </div>
+        </div>
+     </section>
 
+<!-- featurs will enjoy section end -->
+ <!-- some facts -->
+  <section class="some-facts">
+
+  </section>
     <footer>
 
     </footer>
