--- a/index.html
+++ b/index.html
@@ -56,41 +56,57 @@
    </section>
     </main>
 <!-- teams secetion end -->
- <!-- featurs will enjoy section start -->
+<!-- some-facts -->
      <section>
-        <h3>Some facts</h3>
+        <h3 class="facts-head">Some facts</h3>
         <div class="featurs-pragraph">
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <p>There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
         </div>
-        <div class="facts-container">
-            <div class="fact">
-                <img src="" alt="" class="fact-icone">
-                <h4 class="fact-number"></h4>
-                <h5 class="fact-name"></h5>
+        <div class="facts-container ">
+            <div class="fact-card">
+          <div>
+                  <img src="./images/icons/ribon.png" alt="" class="fact-icone">
+                <h4 class="fact-number">54</h4>
+                <h5 class="fact-name">Awaards winnigs</h5>
+          </div>
             </div>
-            <div class="fact">
-                <img src="" alt="" class="fact-icone">
-                <h4 class="fact-number"></h4>
-                <h5 class="fact-name"></h5>
+         <div>
+               <div class="fact-card">
+                <img src="./images/icons/projects.png" alt="" class="fact-icone">
+                <h4 class="fact-number">1458</h4>
+                <h5 class="fact-name">project finished</h5>
+         </div>
             </div>
-            <div class="fact">
-                <img src="" alt="" class="fact-icone">
-                <h4 class="fact-number"></h4>
-                <h5 class="fact-name"></h5>
+            <div class="fact-card">
+               <div>
+                 <img src="./images/icons/customers.png" alt="" class="fact-icone">
+                <h4 class="fact-number">590</h4>
+                <h5 class="fact-name">clients worked</h5>
+               </div>
             </div>
-            <div class="fact">
-                <img src="" alt="" class="fact-icone">
-                <h4 class="fact-number"></h4>
-                <h5 class="fact-name"></h5>
+            <div class="fact-card">
+               <div>
+                 <img src="./images/icons/email.png" alt="" class="fact-icone">
+                <h4 class="fact-number">22578</h4>
+                <h5 class="fact-name">Email send</h5>
+               </div>
             </div>
         </div>
      </section>
-
-<!-- featurs will enjoy section end -->
  <!-- some facts -->
-  <section class="some-facts">
-
-  </section>
+   <section class="our-sponser">
+    <div class="sponsor-info">
+        <h3 class="section-tittel">Our sponsor</h3>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+    </div>
+    <div class="sponsor-companise">
+        <img src="./images/sponsors/spotify.png" alt="">
+        <img src="./images/sponsors/amazon.png" alt="">
+        <img src="./images/sponsors/google.png" alt="">
+        <img src="./images/sponsors/telerama.png" alt="">
+        <img src="./images/sponsors/figma.png" alt="">
+    </div>
+   </section>
     <footer>
 
     </footer>
